assets/styles/css/style.css
html,
body {
  /* font-family: europa, sans-serif;
  font-weight: 400;
  font-style: normal; */
  font-family: 'Lato', sans-serif;
  scroll-behavior: smooth;
}

body p {
  font-weight: 400;
}

nav {
  padding-top: 2.5rem;
  text-align: center;
  height: 150px;
}

nav menu .fas.fa-bars {
  display: none;
}

nav .menuBtn {
  cursor: pointer;
  color: #808080;
}

#desktopMenu {
  display: none;
}

#mobileMenu {
  display: block;
}

#grid {
  margin: 0 auto;
  display: flex;
flex-direction: row;
align-content: center;
flex-wrap: wrap;
justify-content: center;
align-items: center;
}

img {
  width: 100%;
  max-width: 300px;
  /* cursor: pointer; */
  margin: 1rem;
}

#exampleModalLong h1 {
  line-height: 1.2em;
  text-transform: none;
  letter-spacing: .01em;
  font-weight: 700;
  font-style: normal;
  font-size: 26px;
  text-transform: uppercase;
}

#exampleModalLong span {
  font-size: 16px;
  font-weight: bolder;
}

#about-img {
  margin: 0 auto;
  display: block;
  margin-bottom: 1rem;
}

.fade {
  background: #fffffff5;
}

@media all and (min-width: 576px) {
  .modal-dialog {
    max-width: 65%;
  }
}

.modal-content {
  border: 0;
  background-color: initial;
}

#menu {
  height: 5rem;
  width: 100%;
  margin-bottom: 0.5rem;
}

#menu h1 {
  padding: 0;
  padding-top: 1rem;
  text-align: center;
  font-size: 2rem;
  text-transform: uppercase;
  letter-spacing: 0.075em;
}

.hide-show {
  display: none;
}

@media all and (min-width: 480px) {
  #menu h1 {
    font-size: 40px;
    font-weight: bold;
  }

  .hide-show {
    display: inline;
  }
}

#menu .fas {
  float: right;
  cursor: pointer;
  font-size: 2rem;
  display: none;
}

.sidenav {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 99;
  top: 0;
  right: 0;
  background-color: #ffffff;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 60px;
  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
    0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
}

.sidenav a {
  padding: 10px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

.sidenav a:hover {
  color: #f1f1f1;
}

.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

#sub-menu a,
#portfolio-sub-menu a {
  font-size: 1rem;
}

@media screen and (max-height: 450px) {
  .sidenav {
    padding-top: 15px;
  }

  .sidenav a {
    font-size: 18px;
  }
}

li i {
  padding-right: 10px;
}

.modal.fade h3,
.modal.fade h5,
.modal.fade span,
.modal.fade p,
.modal.fade ul li {
  color: #000000;
  line-height: 2em;
  text-transform: none;
  letter-spacing: .04em;
  font-weight: 400;
  font-style: normal;
  font-size: 12px;
}

.modal.fade ul {
  margin-bottom: 2.5rem;
}

.modal-body button {
  background: #ffffffe6;
  border: #818181 solid 2.5px;
  color: #818181;
  width: 200px;
  cursor: pointer;
  margin: 0 auto;
  display: block;
}

.modal-header {
  border-bottom: none;
}

@media all and (min-width: 520px) {
  #main .menuBtn {
    display: none;
  }
  #desktopMenu {
    display: block;
  }
  
  #mobileMenu {
    display: none;
  }
}

@media all and (min-width: 768px) {
  nav {
    height: 175px;
  }
  
}

